# ConnectedDrivingPipelineV4

./: .coveragerc  .dockerignore  .gitignore  404.html  ANALYSIS_INDEX.md  API_Reference.html  CACHE_KEY_SPECIFICATION.html  CI_CD.md  CI_FIX_COMPREHENSIVE_PLAN_PROGRESS.md  COMPREHENSIVE_ATTACK_ANALYSIS.md  COMPREHENSIVE_DASK_MIGRATION_PLAN_PROGRESS.md  CONFIG_VALIDATION_SUMMARY.md  DASK_BOTTLENECK_PROFILING_REPORT.md  DASK_VS_PYSPARK_UDF_PERFORMANCE_REPORT.md  DEP-MClassifierLargePipelineUserNoXYOffsetPosNoMaxDistMapCreatorSuperEnlarged.py  DOCKER.md  DaskMClassifierConstOffsetPerID100To200.py  DaskMClassifierConstOffsetPerID50To100.py  DaskMClassifierConstOffsetPerIDExtFeatures100To200.py  DaskMClassifierConstOffsetPerIDWithRandDir50To100.py  DaskMClassifierConstPosPerCar100To200.py  DaskMClassifierConstPosPerCar10To20.py  DaskMClassifierConstPosPerCar50To100.py  DaskMClassifierPositionSwap.py  DaskMClassifierRandOffset100To200.py  DaskMClassifierRandOffset10To20.py  DaskMClassifierRandOffset50To100.py  DaskMClassifierRandomPos0To2000.py  DaskPipelineRunner_Configuration_Guide.html  Dockerfile  EXECUTIVE_SUMMARY.txt  FIXES_REQUIRED.md  JAEKEL-SERVER.md  MClassifierLargePipelineUserJNoCacheWithXYOffsetPos2000mDistRandSplit80PercentTrain20PercentTestAllRowsONLYXYELEVCols30attackersConstPosPerCarOffset100To200xN106y41d01to30m04y2021.py  MClassifierLargePipelineUserJNoCacheWithXYOffsetPos2000mDistRandSplit80PercentTrain20PercentTestAllRowsONLYXYELEVCols30attackersConstPosPerCarOffset10To20xN106y41d01to30m04y2021.py  (+127 more)
.github/: dependabot.yml
ClassTypes/: Singleton.py  (+1 more)
(+434 files in other folders)
